--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -44,3 +44,7 @@
 [[constraint]]
   name = "github.com/Masterminds/squirrel"
   version = "1.0.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/blockloop/scan"
